# ICE40-DirectConfig-WebUI

./: CMakeLists.txt  README.md  sdkconfig
components/ICE40DirectConfig/: CMakeLists.txt  ICE40DirectConfig.c  ICE40DirectConfig.h  Kconfig
components/ICE40DirectConfig_WebUI/: CMakeLists.txt  ICE40DirectConfig_WebUI.c  ICE40DirectConfig_WebUI.h
components/ICE40DirectConfig_WebUI/webpage/: web_interface.css  web_interface.html  web_interface.js
main/: main.c
